Optimise server settings

--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Tue May 13 07:30:50 BST 2025
+#Tue May 13 20:17:38 BST 2025
 allow-flight=true
 allow-nether=true
 broadcast-console-to-ops=true
@@ -27,9 +27,9 @@ level-seed=
 level-type=minecraft\:normal
 max-chained-neighbor-updates=1000000
 max-players=20
-max-tick-time=60000
+max-tick-time=-1
 max-world-size=29999984
-motd=A Minecraft Server
+motd=chocolate milk
 network-compression-threshold=256
 online-mode=true
 op-permission-level=4
@@ -46,13 +46,13 @@ resource-pack-prompt=
 resource-pack-sha1=
 server-ip=
 server-port=25565
-simulation-distance=6
+simulation-distance=4
 spawn-animals=true
 spawn-monsters=true
 spawn-npcs=true
 spawn-protection=16
-sync-chunk-writes=true
+sync-chunk-writes=false
 text-filtering-config=
 use-native-transport=true
-view-distance=10
+view-distance=7
 white-list=false
