Use correct seed for world

--- a/server.properties
+++ b/server.properties
@@ -1,12 +1,14 @@
 #Minecraft server properties
-#Wed May 14 05:11:11 BST 2025
+#Wed May 14 06:07:15 UTC 2025
+accepts-transfers=false
 allow-flight=true
 allow-nether=true
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
-difficulty=easy
+difficulty=normal
 enable-command-block=true
 enable-jmx-monitoring=false
+enable-lan-visibility=false
 enable-query=false
 enable-rcon=false
 enable-status=true
@@ -23,8 +25,9 @@ hide-online-players=false
 initial-disabled-packs=
 initial-enabled-packs=vanilla
 level-name=world
-level-seed=
-level-type=minecraft\:normal
+level-seed=2694343176788654791
+level-type=default
+max-build-height=256
 max-chained-neighbor-updates=1000000
 max-players=20
 max-tick-time=-1
@@ -40,13 +43,16 @@ query.port=25565
 rate-limit=0
 rcon.password=
 rcon.port=25575
+region-file-compression=lz4
 require-resource-pack=false
 resource-pack=
-resource-pack-prompt=
+resource-pack-prompt={"text"\:"A resource pack is required to connect to this server.","color"\:"red"}
 resource-pack-sha1=
-server-ip=
-server-port=25565
+server-ip=0.0.0.0
+server-port=25578
+server-portv6=25579
 simulation-distance=4
+snooper-enabled=false
 spawn-animals=true
 spawn-monsters=true
 spawn-npcs=true
@@ -55,4 +61,4 @@ sync-chunk-writes=false
 text-filtering-config=
 use-native-transport=true
 view-distance=7
-white-list=false
+white-list=true
